--- a/IOT/index.html
+++ b/IOT/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<header class="mui-bar mui-bar-nav">
-		<h1 class="mui-title">ZZES-IOT</h1>
+		<h1 class="mui-title">宠物屋设备</h1>
 	</header>
 
 			
@@ -31,6 +31,14 @@
 					}
 				}]
 			});
+			
+ 		var contentWebview = null;
+		document.querySelector('header').addEventListener('doubletap',function () {
+			if(contentWebview==null){
+				contentWebview = plus.webview.currentWebview().children()[0];
+			}
+			contentWebview.evalJS("mui('#pullrefresh').pullRefresh().scrollTo(0,0,100)");
+		});
     </script>
 </body>
 
