前端数据可视化界面

--- a/Nodejs_Server/echarttest.html
+++ b/Nodejs_Server/echarttest.html
@@ -267,7 +267,10 @@
 		            data:["1","2","3","4","最新"]
        			}
 				],
-				yAxis:{},
+				yAxis:{
+					min: 0,
+        		max: 80,
+				},
 				series: [{
 	        		name: '温度',
 	       			type: 'line',
